--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
 	<!-- place for plugins -->
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<!-- GoogleFonts place -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900|Open+Sans:300,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,900|Roboto&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900|Open+Sans:300,400,400i,600,600i,700,700i,800,800i" rel="stylesheet"> -->
 	<!-- Фавикон -->
 	<!-- <link rel="icon" href="путь до иконки в проект" type="image/x-icon"> -->
 	<!-- <link rel="shortcut" href="путь до иконки в проект" type="image/x-icon"> -->
@@ -38,15 +36,15 @@
 			<div class="contacts">
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<a href='+7 (495) 374–66–55' class="contacts-item__info">+7 (495) 374–66–55</a>
+					<a href='tel:+7 (495) 374 66 55' class="contacts-item__info">+7 (495) 374–66–55</a>
 				</div>
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<a href='+7 (8452) 74–66–55' class="contacts-item__info">+7 (8452) 74–66–55</a>
+					<a href='tel:+7 (8452) 74 66 55' class="contacts-item__info">+7 (8452) 74–66–55</a>
 				</div>
 				<div class="contacts-item">
-					<img class="contacts-item__image" class="contacts-item__message" src="img/hero/contacts/message.png" alt="">
-					<a href="info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
+					<img class="contacts-item__image contacts-item__message" src="img/hero/contacts/message.png" alt="">
+					<a href="mailto:info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
 				</div>					
 			</div>
 			<div class="links-slider">
@@ -116,7 +114,7 @@
 						<p class="hero-footer-policy__text modal-info" data-title="Политика конфиденциальности и пользователское соглашение" data-content="Сайт рыбатекст поможет дизайнеру.">Политика конфиденциальности и пользовательское соглашение</p>
 						
 				</div>
-				<a href="https://asap-ag.ru/">
+				<a href="https://asap-ag.ru/" target="_blank">
 					<div class="hero-footer-creator">
 						<img src="img/hero/лого.png" alt="">
 						<p class="hero-footer-creator__text">Разработка сайта — <br>digital–агентство ASAP</p>
@@ -156,18 +154,18 @@
 						<div class="contacts">
 							<div class="contacts-item">
 								<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-								<a href='+7 (495) 374–66–55' class="contacts-item__info">+7 (495) 374–66–55</a>
+								<a href='tel:+7 (495) 374 66 55' class="contacts-item__info">+7 (495) 374–66–55</a>
 							</div>
 							<div class="contacts-item">
 								<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-								<a href='+7 (8452) 74–66–55' class="contacts-item__info">+7 (8452) 74–66–55</a>
+								<a href='tel:+7 (8452) 74 66 55' class="contacts-item__info">+7 (8452) 74–66–55</a>
 							</div>
 							<div class="contacts-item">
 								<img class="contacts-item__image contacts-item__message" src="img/hero/contacts/message.png" alt="">
-								<a href="info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
-							</div>				
-							</div>
-							<div class="contacts-map">
+								<a href="mailto:info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
+							</div>					
+						</div>
+						<div class="contacts-map">
 								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A620846f27cf62b0a71a587efe57c41733c6e2507ba717f27b247f25c70dbbe8b&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
 							</div>
 				</div>
@@ -269,16 +267,16 @@
 			<div class="contacts">
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<a href='+7 (495) 374–66–55' class="contacts-item__info">+7 (495) 374–66–55</a>
+					<a href='tel:+7 (495) 374 66 55' class="contacts-item__info">+7 (495) 374–66–55</a>
 				</div>
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<a href='+7 (8452) 74–66–55' class="contacts-item__info">+7 (8452) 74–66–55</a>
+					<a href='tel:+7 (8452) 74 66 55' class="contacts-item__info">+7 (8452) 74–66–55</a>
 				</div>
 				<div class="contacts-item">
-					<img class="contacts-item__image" class="contacts-item__message" src="img/hero/contacts/message.png" alt="">
-					<a href="info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
-				</div>				
+					<img class="contacts-item__image contacts-item__message" src="img/hero/contacts/message.png" alt="">
+					<a href="mailto:info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
+				</div>			
 			</div>
 			<div class="mobile-slider">
 				<div class="mobile-slide mobile-modal-link" data-title="О компании" data-content="Сайт рыбатекст поможет дизайнеру.">01 о компании</div>
@@ -303,14 +301,13 @@
 				<p>©2019 Долговед</p><p>Все права защищены</p>
 			</div>
 			<div class="mobile-footer__policy mobile-modal-link" data-title="Политика конфиденциальности и пользовательское соглашение" data-content="Сайт рыбатекст поможет дизайнеру.">Политика конфиденциальности и пользовательское соглашение</div>
-			<a href="https://asap-ag.ru/">
+			<a href="https://asap-ag.ru/" target="_blank">
 				<div class="mobile-footer-creator">
 					<img src="img/hero/лого.png" alt="">
 					<p class="mobile-footer-creator__text">Разработка сайта — <br>digital–агентство ASAP</p>
 				</div>
 			</a>
 			<!--Popup-->
-			</div>
 		</div>
 		<!--/Mobile container-->
 	</section>
@@ -361,7 +358,7 @@
 						<p>©2019 Долговед</p><p>Все права защищены</p>
 					</div>
 					<div class="mobile-footer__policy mobile-modal-link" data-title="Политика конфиденциальности и пользовательское соглашение" data-content="Сайт рыбатекст поможет дизайнеру.">Политика конфиденциальности и пользовательское соглашение</div>
-					<a href="https://asap-ag.ru/">
+					<a href="https://asap-ag.ru/" target="_blank">
 						<div class="mobile-footer-creator">
 							<img src="img/hero/лого.png" alt="">
 							<p class="mobile-footer-creator__text">Разработка сайта — <br>digital–агентство ASAP</p>
@@ -389,7 +386,6 @@
 					<input type="file" data-multiple-caption="{count}" name='file' multiple="multiple" id="file">
 				</div>
 				<button class="mobile-debt-footer__button form-button">Оставить  заявку</button>
-				
 			</form>
 			<div class="mobile-debt-footer__answer">
 				<h1 class="mobile-debt-footer__title">Благодарим за заявку!</h1>
@@ -405,7 +401,7 @@
 				<p>©2019 Долговед</p><p>Все права защищены</p>
 			</div>
 			<div class="mobile-footer__policy mobile-modal-link" data-title="Политика конфиденциальности и пользовательское соглашение" data-content="Сайт рыбатекст поможет дизайнеру.">Политика конфиденциальности и пользовательское соглашение</div>
-			<a href="https://asap-ag.ru/">
+			<a href="https://asap-ag.ru/" target="_blank">
 				<div class="mobile-footer-creator">
 					<img src="img/hero/лого.png" alt="">
 					<p class="mobile-footer-creator__text">Разработка сайта — <br>digital–агентство ASAP</p>
@@ -432,7 +428,7 @@
 				<p>©2019 Долговед</p><p>Все права защищены</p>
 			</div>
 			<div class="mobile-footer__policy mobile-modal-link" data-title="Политика конфиденциальности и пользовательское соглашение" data-content="Сайт рыбатекст поможет дизайнеру.">Политика конфиденциальности и пользовательское соглашение</div>
-			<a href="https://asap-ag.ru/">
+			<a href="https://asap-ag.ru/" target="_blank">
 				<div class="mobile-footer-creator">
 					<img src="img/hero/лого.png" alt="">
 					<p class="mobile-footer-creator__text">Разработка сайта — <br>digital–агентство ASAP</p>
@@ -451,15 +447,15 @@
 			<div class="contacts">
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<a href='+7 (495) 374–66–55' class="contacts-item__info">+7 (495) 374–66–55</a>
+					<a href='tel:+7 (495) 374 66 55' class="contacts-item__info">+7 (495) 374–66–55</a>
 				</div>
 				<div class="contacts-item">
 					<img class="contacts-item__image" src="img/hero/contacts/phone.png" alt="">
-					<a href='+7 (8452) 74–66–55' class="contacts-item__info">+7 (8452) 74–66–55</a>
+					<a href='tel:+7 (8452) 74 66 55' class="contacts-item__info">+7 (8452) 74–66–55</a>
 				</div>
 				<div class="contacts-item">
-					<img class="contacts-item__image" class="contacts-item__message" src="img/hero/contacts/message.png" alt="">
-					<a href="info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
+					<img class="contacts-item__image contacts-item__message" src="img/hero/contacts/message.png" alt="">
+					<a href="mailto:info@dolgoved.ru" class="contacts-item__info">info@dolgoved.ru</a>
 				</div>				
 			</div>
 		</div>
@@ -477,7 +473,7 @@
 				<p>©2019 Долговед</p><p>Все права защищены</p>
 			</div>
 			<div class="mobile-footer__policy mobile-modal-link" data-title="Политика конфиденциальности и пользовательское соглашение" data-content="Сайт рыбатекст поможет дизайнеру.">Политика конфиденциальности и пользовательское соглашение</div>
-			<a href="https://asap-ag.ru/">
+			<a href="https://asap-ag.ru/" target="_blank">
 				<div class="mobile-footer-creator">
 					<img src="img/hero/лого.png" alt="">
 					<p class="mobile-footer-creator__text">Разработка сайта — <br>digital–агентство ASAP</p>
